--- a/package.json
+++ b/package.json
@@ -10,8 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.0.3",
+    "@react-navigation/native": "^7.0.2",
+    "@react-navigation/tabs": "^0.0.0-alpha.12",
+    "@shopify/react-native-skia": "^1.5.3",
+    "axios": "^1.7.7",
     "react": "18.3.1",
-    "react-native": "0.76.2"
+    "react-native": "0.76.2",
+    "react-native-config": "^1.5.3",
+    "react-native-gesture-handler": "^2.21.0",
+    "react-native-mmkv": "^3.1.0",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.1.0",
+    "react-native-svg": "^15.9.0",
+    "react-native-toast-message": "^2.2.1",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -24,12 +38,16 @@
     "@react-native/eslint-config": "0.76.2",
     "@react-native/metro-config": "0.76.2",
     "@react-native/typescript-config": "0.76.2",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/axios": "^0.14.4",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
